--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>台灣發展歷史網頁</title>
-    <meta name="description" content="此網站介紹台灣過去70年的經濟發展與相關政策">
+    <title>Ying-han 的網頁</title>
+    <meta name="description" content="此網站自我介紹...話說是不是全英文比較好">
     <link rel="stylesheet" href="./twicon/twicon.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- google font setting -->
@@ -25,7 +25,7 @@
         ]);
 
         var options = {
-          title: '台灣競技螺旋丸',
+          title: '年齡與學習力螺旋曲線之我只是想放看看圖表',
           curveType: 'function',
           legend: { position: 'bottom' }
         };
@@ -35,13 +35,13 @@
         chart.draw(data, options);
       }
     </script>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="">
 </head>
 <body>
     <!--標題-->
     <header>
-        <h1><i class="twicon-main-island"></i>台灣經濟發展歷史</h1>
-        <h3>過去70年台灣經濟發展的歷史以及相關政策</h3>
+        <h1><i class="twicon-main-island"></i>Ying-han Personal Webpage</h1>
+        <h3>主要測試看看把東西丟在Github的效果如何</h3>
     </header>
     <!--導覽-->
     <nav>
@@ -50,37 +50,36 @@
                 <a class="active" href="#"><i class="twicon-main-island"></i> 首頁</a>
             </li>
             <li>
-                <a href="./second.html"><i class="twicon-lovers-brg"></i>  農業改革</a>
+                <a href="./second.html"><i class="twicon-lovers-brg"></i>  還沒想到一</a>
             </li>
             <li>
-                <a href="./third.html"><i class="twicon-nt-mus"></i>  工業改革</a>
+                <a href="./third.html"><i class="twicon-nt-mus"></i>  還沒想到二</a>
             </li>
             <li>
-                <a href="./fourth.html"><i class="twicon-taipei101"></i>  經濟起飛</a>
+                <a href="./fourth.html"><i class="twicon-taipei101"></i>  還沒想到三</a>
             </li>
             <li>
-                <a href="./fifth.html"><i class="twicon-l-youbike"></i>  關於作者</a>
+                <a href="./fifth.html"><i class="twicon-l-youbike"></i>  還沒想到先放四格</a>
             </li>
         </ul>
     </nav>
     <!--主要內容-->
     <main>
         <section class="left">
-            <p> 台灣是太平洋中的一個島嶼。今天，這個島上生活著不同的人群，包括福建，客家，其他省份的中國人，台灣原住民和東南亞移民。第二次世界大戰之前，台灣是日本的殖民地。 
-                1895年，由於第一次抗日戰爭失敗，中國將台灣，遼東半島等地賜予日本。第二次世界大戰後，中華民國政府移居台灣，並開始建造該島。中華民國政府在1949年到達台灣時，
-                也有將近200萬士兵及其家屬也移居台灣。當時中華民國政府到達台灣時，有許多事情需要解決。 1945年第二次世界大戰結束時，台灣的經濟和衛生條件很低。中華民國政府對台灣的發展產生了重大影響，
-                將經濟實體從農業轉變為高科技產業。
-                在1960年代至1980年代期間，一系列嚴肅的新政策和發展計劃使台灣工業化。台灣國家統計局表示，1965年人均GDP為229美元，而30年後，1984年人均GDP增至3225美元。
+            <p> 《JoJo的奇妙冒險》（日語：ジョジョの奇妙な冒険）是日本漫畫家荒木飛呂彥的少年漫畫作品。簡稱JoJo。
+                自1987年起至2004年在集英社的少年漫畫雜誌《少年JUMP週刊》連載（1987年－2004年）第一部至第六部，
+                2005年之後於集英社的青年向漫畫雜誌《Ultra Jump》連載。目前連載至第八部，並有大量的外傳。
+                故事描述英國貴族喬斯達家族（JoJo）與吸血鬼迪奧（DIO）及其後繼者間長達百年以上的對決，全篇作品以「歌頌人類」為主題，
+                故事中有著夥伴之間的羈絆、與強大的敵人戰鬥等少年漫畫的經典元素，由其獨特的畫風和表現形式構成不可思議的獨特世界。單行本目前發行至128冊，是集英社內集數次多的作品。
+                台灣無版權時期東立出版社譯為《強人陣線》（也譯為《魔域冒險》），後來大然出版社取得授權譯為《JoJo冒險野郎》，之後東立出版社取得版權改回與日文相同的《JoJo的奇妙冒險》。
             </p>
-            <p>當R.O.C. 政府到達台灣後，他們所做的第一件事是一系列的土地政策。 首先，他們修改了法案以減少與中國法案系統的聯繫，然後發行了台幣。
-                之後，他們為農民建立了許多規則，以便他們能夠自給自足。 改善經濟狀況的第二步是發展“輕工業”。 政府開始幫助建立小工廠，生產紡織品，鞋和紙。 這幫助台灣準備轉移到“重工業”。 
-               為了刺激投資，政府鼓勵世界各地的投資者在台灣港口建立工廠。 這次是發展的第三步。 該網站將討論台灣發生了什麼，台灣的政策和變化以及誰來幫助並使所有這些事情發揮作用。 
+            <p>(以上COPY wiki)
             </p>
             <br>
             <div id="curve_chart" style="width: 900px; height: 500px"></div>
         </section>
         <section class="right">
-            <h4>台灣經濟發展小知識:<br>你知道台灣在哪裡嗎?</h4>
+            <h4>小知識:<br>你知道台灣在哪裡嗎?</h4>
             <br>
             <p>台灣是太平洋上的一個小島。 它毗鄰中國，在島上的原住民被認為是太平洋群島南島語族語系人民的起源。
                 台灣的陸地面積為13972公里，島上約有2380萬人居住，最主要通用語言為中文、閩南語、客家話。 
