--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         chart.draw(data, options);
       }
     </script>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <!--標題-->
