--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ying-han 的網頁</title>
     <meta name="description" content="此網站自我介紹...話說是不是全英文比較好">
-    <link rel="stylesheet" href="./twicon/twicon.css">
+<!--     <link rel="stylesheet" href="./twicon/twicon.css"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <!-- google font setting -->
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap" rel="stylesheet">
