--- a/index.html
+++ b/index.html
@@ -66,12 +66,7 @@
     <!--主要內容-->
     <main>
         <section class="left">
-            <p> 《JoJo的奇妙冒險》（日語：ジョジョの奇妙な冒険）是日本漫畫家荒木飛呂彥的少年漫畫作品。簡稱JoJo。
-                自1987年起至2004年在集英社的少年漫畫雜誌《少年JUMP週刊》連載（1987年－2004年）第一部至第六部，
-                2005年之後於集英社的青年向漫畫雜誌《Ultra Jump》連載。目前連載至第八部，並有大量的外傳。
-                故事描述英國貴族喬斯達家族（JoJo）與吸血鬼迪奧（DIO）及其後繼者間長達百年以上的對決，全篇作品以「歌頌人類」為主題，
-                故事中有著夥伴之間的羈絆、與強大的敵人戰鬥等少年漫畫的經典元素，由其獨特的畫風和表現形式構成不可思議的獨特世界。單行本目前發行至128冊，是集英社內集數次多的作品。
-                台灣無版權時期東立出版社譯為《強人陣線》（也譯為《魔域冒險》），後來大然出版社取得授權譯為《JoJo冒險野郎》，之後東立出版社取得版權改回與日文相同的《JoJo的奇妙冒險》。
+            <p> 《JoJo的奇妙冒險》（日語：ジョジョの奇妙な冒険）是日本漫畫家荒木飛呂彥的少年漫畫作品。簡稱JoJo。自1987年起至2004年在集英社的少年漫畫雜誌《少年JUMP週刊》連載（1987年－2004年）第一部至第六部，2005年之後於集英社的青年向漫畫雜誌《Ultra Jump》連載。目前連載至第八部，並有大量的外傳。故事描述英國貴族喬斯達家族（JoJo）與吸血鬼迪奧（DIO）及其後繼者間長達百年以上的對決，全篇作品以「歌頌人類」為主題，故事中有著夥伴之間的羈絆、與強大的敵人戰鬥等少年漫畫的經典元素，由其獨特的畫風和表現形式構成不可思議的獨特世界。單行本目前發行至128冊，是集英社內集數次多的作品。台灣無版權時期東立出版社譯為《強人陣線》（也譯為《魔域冒險》），後來大然出版社取得授權譯為《JoJo冒險野郎》，之後東立出版社取得版權改回與日文相同的《JoJo的奇妙冒險》。
             </p>
             <p>(以上COPY wiki)
             </p>
