--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <!--主要內容-->
     <main>
         <section class="left">
-            <p> 這個位置放一些說明
+            <p>《鬼滅之刃》（日語：鬼滅の刃），簡稱《鬼滅》，是日本漫畫家吾峠呼世晴所創作的奇幻漫畫作品，描述主角炭治郎為了尋求讓被變成鬼的妹妹復原的方法，踏上斬鬼之旅的和風刀劍奇譚[1]。於2016年2月15日至2020年5月18日在《週刊少年Jump》連載[2]，全205話。漫畫改編電視動畫第一季「竈門炭治郎 立志篇」於2019年4月至9月播放，並於2020年10月16日上映續集電影《鬼滅之刃劇場版 無限列車篇》[3]。動畫第二季「鬼滅之刃 遊郭篇」預定於2021年播放[4]。
             </p>
             <p>(以上COPY wiki)
             </p>
