--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header -->
     <header>
        <div class="logo">
-           <img src="./Icons/black logo.svg" alt="Logo">
+           <img src="https://t27337732.github.io/Icons/black logo.svg" alt="Logo">
            <h1>夏威夷旅遊租借服務</h1>
        </div>
 
