--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <section class="cards">
             <div class="card">
-                <img src="./Pictures/braden-jarvis-prSogOoFmkw-unsplash.jpg" alt="picture">
+                <a target="_blank" href="./Pictures/braden-jarvis-prSogOoFmkw-unsplash.jpg"><img src="./Pictures/braden-jarvis-prSogOoFmkw-unsplash.jpg" alt="picture"></a>
                 <h4>快速運送</h4>
                 <p>我們承諾在一個工作天內，送達您所訂購的物品，
                     夏威夷群島境內都適用，您放心訂購，我們專業送達
